@@ -1,8 +1,13 @@
 package server;
 
-import server.element.*;
+import server.note.*;
+// Apparently need to include this until I delete the old Note class under server
+import server.note.Note;
 import server.categories.MediaType;
 import java.net.MalformedURLException;
+import java.util.NoSuchElementException;
+
+import static server.NoteTestHelper.*;
 
 import org.junit.jupiter.api.*;
 import static org.junit.jupiter.api.Assertions.*;
@@ -15,86 +20,91 @@ public class NoteTest {
     private static Note emptyTestNote;
     private static Note subNote1;
     private static Note subNote2;
+    private static final Entity artist = Entity.newArtist("Grand Funk", null);
 
     @BeforeAll
     public static void setUpTests() throws MalformedURLException {
-        emptyTestNote = NoteTestHelper.createGenericTestNote();
-        noteWithRandomElements = NoteTestHelper.createGenericTestNoteWithRandomElements(defaultElementCount);
-        subNote1 = NoteTestHelper.createGenericTestNote("Test sub-note");
-        subNote1.addElement(new MediaItem("I'm Your Captain", "Grand Funk", MediaType.SONG));
-        subNote2 = NoteTestHelper.createGenericTestNote("Test sub-note");
-        subNote2.addElement(new Link("Google", "http://facebook.com"));
+        emptyTestNote = createGenericTestNote();
+        noteWithRandomElements = createGenericTestNoteWithRandomElements(defaultElementCount);
+        subNote1 = createGenericTestNote("Test sub-note");
+        subNote1.addChildNote(new Product("I'm Your Captain", null, artist).setType(MediaType.SONG));
+        subNote2 = createGenericTestNote("Test sub-note");
+        subNote2.addChildNote(new Link("Google", "http://facebook.com"));
     }
 
     @AfterEach
     public void testCleanup() {
-        emptyTestNote.clear();
-        noteWithRandomElements = NoteTestHelper.createGenericTestNoteWithRandomElements(defaultElementCount);
+        clearChildNotes(emptyTestNote);
+        noteWithRandomElements = createGenericTestNoteWithRandomElements(defaultElementCount);
     }
+
+    // ToDo: Add test for each Note type
 
     @Test
     // ToDo: MP points out that this implicitly tests the items ORDER as well
     //  Need separate tests for ordering
     public void createNoteWithEachElementType() throws MalformedURLException {
-        emptyTestNote.addElement(new Contact().setName("Contact1")
-                .setPhoneNumber("234-5678").setAddress1("123 4th St.").setCity("Menlo Park"));
-/*
-        testNote.addElement(new Contact("Contact1", "")
-                .setPhoneNumber("234-5678").setAddress1("123 4th St.").setCity("Menlo Park"));
-*/
-        // testNote.addElement(new Contact("Contact1", "234-5678", "123 4th St.", "Menlo Park"));
-        emptyTestNote.addElement(new MediaItem("Blind Alley", "Fanny", MediaType.SONG));
+        emptyTestNote.addChildNote(Entity.newContact("Contact1", null).setAddress(
+                new Address().setPhoneNumber("234-5678").setAddress1("123 4th St.").setCity("Menlo Park")));
+        emptyTestNote.addChildNote(new Product("Blind Alley", null, Entity.newArtist("Fanny", null))
+                .setType(MediaType.SONG));
         // emptyTestNote.addElement(new Price(5.00));
-        emptyTestNote.addElement(new Link("Google", "http://google.com"));
-        emptyTestNote.addElement(new EventInfo("Deadline", null, "2020-06-12 00:00:00"));
-        emptyTestNote.addElement(new Note("Note1"));
+        emptyTestNote.addChildNote(new Link("Google", "http://google.com"));
+        emptyTestNote.addChildNote(new ScheduleItem("Deadline", null, "2020-06-12 00:00:00"));
+        emptyTestNote.addChildNote(new Note("Note1"));
 
         System.out.println(emptyTestNote);
         // ToDo: Use fluent assertions (no need for Hamcrest matchers)?
         // assertThat("Expected Contact type at position 0", testNote.getElement(0));
-        assertSame(emptyTestNote.getElement(0), emptyTestNote.getElement(Contact.class, 0),
-                "Expected Contact type at position 0");
-        assertSame(emptyTestNote.getElement(1), emptyTestNote.getElement(MediaItem.class, 0),
-                "Expected MediaItem type at position 1");
+        // ToDo: Rethink the the search tests (the ordering of the child-notes is less important now)
 /*
+        assertSame(emptyTestNote.getChildNotes().getFirst(), emptyTestNote.getElement(Contact.class, 0),
+                "Expected Contact type at position 0");
+        assertSame(emptyTestNote.getChildNotes().get(1), emptyTestNote.getElement(MediaItem.class, 0),
+                "Expected MediaItem type at position 1");
         assertSame(emptyTestNote.getElement(2), emptyTestNote.getElement(Price.class, 0),
                 "Expected Price type at position 2");
-*/
         assertSame(emptyTestNote.getElement(3), emptyTestNote.getElement(Link.class, 0),
                 "Expected Link type at position 3");
         assertSame(emptyTestNote.getElement(4), emptyTestNote.getElement(EventInfo.class, 0),
                 "Expected EventInfo type at position 4");
+*/
     }
 
     @Test
     public void createNoteWithTwoSubNotes() {
-        emptyTestNote.addElement(subNote1);
-        emptyTestNote.addElement(subNote2);
+        emptyTestNote.addChildNote(subNote1);
+        emptyTestNote.addChildNote(subNote2);
 
         // System.out.println(emptyTestNote);
+        assertEquals(2, emptyTestNote.getChildNotes().size(), "Number of child notes");
+        // ToDo: Rethink the search tests
+/*
         assertSame(emptyTestNote.getElement(0), emptyTestNote.getElement(Note.class, 0),
                 "Expected Contact type at position 0");
         assertSame(emptyTestNote.getElement(1), emptyTestNote.getElement(Note.class, 1),
                 "Expected Contact type at position 0");
+*/
         // ToDo: Assert size of sub-note list = 2
     }
 
     @Test
-    // ToDo: MP suggests callingClearRemovesAllElements()
+    // ToDo: MP suggests callingClearRemovesAllElements() (i.e. we're testing the clear/delete function)
     public void removeAllElements() {
         // System.out.println(noteWithRandomElements);
-        assertEquals(defaultElementCount, noteWithRandomElements.getElements().size(), "Number of Note elements");
-        noteWithRandomElements.getElements().clear();
-        assertEquals(0, noteWithRandomElements.getElements().size(), "Number of Note elements");
+        assertEquals(defaultElementCount, noteWithRandomElements.getChildNotes().size(), "Number of Note elements");
+        clearChildNotes(noteWithRandomElements);
+        assertEquals(0, noteWithRandomElements.getChildNotes().size(), "Number of Note elements");
     }
 
     @Test
     public void removeOneOfMultipleElements() {
-        NoteElement<?> element = noteWithRandomElements.getElements().get(0);
-        noteWithRandomElements.removeElement(element);
+        NoteBase note = noteWithRandomElements.getChildNotes().getFirst();
+        noteWithRandomElements.removeChildNote(note);
         // This test has randomly failed here:
-        assertFalse(noteWithRandomElements.getElements().contains(element), "Note contains element '" + element.getName() + "'");
-        assertEquals(defaultElementCount - 1, noteWithRandomElements.getElements().size(),
+        assertFalse(noteWithRandomElements.getChildNotes().contains(note),
+                "Note contains element '" + note.getName() + "'");
+        assertEquals(defaultElementCount - 1, noteWithRandomElements.getChildNotes().size(),
                 "Number of note elements after deletion");
     }
 
@@ -102,11 +112,11 @@ public class NoteTest {
 
     @Test
     public void addElementAtASpecifiedLocation() {
-        NoteElement<?> testNoteElement = NoteTestHelper.getRandomNoteElement();
+        NoteBase testNoteElement = NoteTestHelper.getRandomNoteElement();
         int elementIndex = 3;
-        noteWithRandomElements.addElement(testNoteElement, 3);
-        assertEquals(defaultElementCount + 1, noteWithRandomElements.getElements().size(), "Number of Note elements");
-        assertSame(testNoteElement, noteWithRandomElements.getElement(3),
+        noteWithRandomElements.addChildNote(testNoteElement, elementIndex);
+        assertEquals(defaultElementCount + 1, noteWithRandomElements.getChildNotes().size(), "Number of Note elements");
+        assertSame(testNoteElement, noteWithRandomElements.getChildNotes().get(elementIndex),
                 "Expected note element '" + testNoteElement.getName() + "' at index " + elementIndex);
     }
 
@@ -114,20 +124,19 @@ public class NoteTest {
     // ToDo: Test this on a note with multiple sub-notes of different types (e.g. noteWithRandomElements)
     // ToDo: MP suggests gettingNonExistentNoteTypeThrowsError()
     public void tryGettingInvalidClassTypeFromElementList() {
-        Exception ex = assertThrows(RuntimeException.class, () -> emptyTestNote.getElement(Note.class, 0));
-        // System.out.println("Exception message: " + ex.getMessage());
-        String expectedMessage = "No Note element found";
-        assertTrue(ex.getMessage().contains(expectedMessage), "Exception message contains '" + expectedMessage + "'");
+        assertEquals(0, emptyTestNote.getChildNotes().size(), "Number of child notes in emptyTestNote");
+        Exception ex = assertThrows(NoSuchElementException.class, () -> emptyTestNote.getChildNotes().getFirst());
+        assertNull(ex.getMessage(), "For some reason the exception message is null");
     }
 
     @Test
     public void tryGettingInvalidElementIndexFromElementList() throws MalformedURLException {
-        emptyTestNote.addElement(new Link("Google", "http://facebook.com"));
-
-        Exception ex = assertThrows(RuntimeException.class, () -> emptyTestNote.getElement(Link.class, 1));
+        emptyTestNote.addChildNote(new Link("Google", "http://facebook.com"));
+        // ToDo: Rethink the search tests
+        // Exception ex = assertThrows(RuntimeException.class, () -> emptyTestNote.getElement(Link.class, 1));
         // System.out.println("Exception message: " + ex.getMessage());
         String expectedMessage = "Invalid index (1) for list of Link elements (size 1)";
-        assertEquals(expectedMessage, ex.getMessage(), "Exception message equals " + expectedMessage);
+        // assertEquals(expectedMessage, ex.getMessage(), "Exception message equals " + expectedMessage);
     }
 
     // ToDo: Test adding and removing more than one of the same kind of element
